# hues

./: .gitignore  Cargo.toml  FILE_FORMAT.md  README.md
.github/workflows/: rust.yml
examples/: boltzmann.rs  costas.rs  costas_mip.rs  densest_subhypergraph.rs  ds.rs  exact_cover.rs  gen_maxcut.rs  gen_partition.rs  gen_random.rs  golay.rs  gpu_distribution.rs  hopfield.rs  hs.rs  labs.rs  max_xor_sat.rs  mrf.rs  nqueens.rs  pspin.rs  random_hubo.rs  spin_glass.rs
src/: chordal_sdp.rs  coeff.rs  domain.rs  fixes.rs  instance.rs  interrupt.rs  lasserre.rs  lib.rs  main.rs  model.rs  parser.rs  solution.rs  state.rs  term.rs
src/bounds/: cheap.rs  cluster_subgradient.rs  exact_lasserre.rs  hittingset.rs  lasserre.rs  lp.rs  mod.rs  rlt_lagrangian.rs  roof_dual.rs  sherali_adams.rs  srmp.rs  subgradient.rs  trwbp.rs
src/heuristic/: greedy.rs  mod.rs  parallel_tempering.rs  pool.rs  sa.rs  saw.rs  tabu.rs
src/kernelization/: coupling.rs  dominance.rs  error.rs  mod.rs  roof_dual.rs  symmetry.rs  util.rs
src/solver/: mod.rs  scip.rs
src/solver/bnb/: branching.rs  cutting_planes.rs  enumerate.rs  mod.rs  parallel.rs  probing.rs  reporting.rs  serial.rs  solve.rs  types.rs  util.rs
src/solver/bnb/constraints/: constraint.rs  cover_constraint.rs  lex_order_constraint.rs  mod.rs  parity_constraint.rs
src/util/: bitset.rs  error.rs  gpu_sampling.rs  mod.rs  set_ops.rs
