[package]
name = "hues"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
russcip = { version = "0.9.1", features = ["bundled"] }
fixedbitset = "0.5.7"
env_logger = "0.11.10"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
log = "0.4.29"
ctrlc = "3.5.2"
petgraph = "0.8.3"
nauty-pet = "0.14.1"
wgpu = "29.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
rustc-hash = "2.1.2"
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
num = "0.4.3"
bitvec = "1.0.1"
rand = "0.10.1"
rayon = "1.12.0"
crossbeam-deque = "0.8"
rand_xoshiro = "0.8.0"
owo-colors = "4"

[features]
dhat-heap = []

[profile.profiling]
inherits = "release"
debug = true
strip = false
